--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ php:
     - 5.4
 
 env:
+    - WP_VERSION=4.1-beta1 WP_MULTISITE=0
+    - WP_VERSION=4.1-beta1 WP_MULTISITE=1
     - WP_VERSION=latest WP_MULTISITE=0
     - WP_VERSION=latest WP_MULTISITE=1
     - WP_VERSION=3.8 WP_MULTISITE=0
