--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ php:
     - 5.4
 
 env:
-    - WP_VERSION=4.1-beta1 WP_MULTISITE=0
-    - WP_VERSION=4.1-beta1 WP_MULTISITE=1
+    - WP_VERSION=4.1-RC3 WP_MULTISITE=0
     - WP_VERSION=latest WP_MULTISITE=0
-    - WP_VERSION=latest WP_MULTISITE=1
+    - WP_VERSION=3.9 WP_MULTISITE=0
     - WP_VERSION=3.8 WP_MULTISITE=0
-    - WP_VERSION=3.8 WP_MULTISITE=1
+    - WP_VERSION=3.7 WP_MULTISITE=0
+    - WP_VERSION=3.6 WP_MULTISITE=0
 
 before_script:
     - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION 
