--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,14 @@ env:
     - WP_VERSION=3.7 WP_MULTISITE=0
     - WP_VERSION=3.6 WP_MULTISITE=0
 
+matrix:
+  exclude:
+    - php: 5.5
+      env: WP_VERSION=3.6
+    - php: 5.5
+      env: WP_VERSION=3.7
+
 before_script:
-    - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION 
+    - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
 
 script: phpunit
