--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "title": "Simple Map",
   "license" : "GPLv2",
   "description": "Easy way to embed google map(s) using gmaps.js.",
-  "version": "2.4.0",
+  "version": "2.6.0",
   "homepage": "http://wordpress.org/plugins/simple-map/",
   "repository" : {
     "type" : "git",
@@ -14,11 +14,12 @@
     "url": "http://wpist.me/"
   },
   "dependencies": {
-    "gmaps": "git+ssh://git@github.com:HPNeo/gmaps.git#0.4.18"
+    "gmaps": "git+ssh://git@github.com:HPNeo/gmaps.git#0.4.19"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-contrib-uglify": "~0.1.1"
+    "grunt-contrib-uglify": "~0.1.1",
+    "grunt-contrib-qunit": "*"
   },
   "keywords": []
 }
