--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,8 @@ env:
 
 before_script:
     - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
+    - npm install
 
-script: phpunit
+script:
+    - phpunit
+    - grunt test
