--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "simple-map",
   "title": "Simple Map",
-  "license" : "GPLv2",
+  "license": "GPLv2",
   "description": "Easy way to embed google map(s) using gmaps.js.",
   "version": "2.6.0",
   "homepage": "http://wordpress.org/plugins/simple-map/",
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/miya0001/simple-map"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/miya0001/simple-map"
   },
   "author": {
     "name": "Takayuki Miyauchi",
@@ -18,8 +18,10 @@
   },
   "devDependencies": {
     "grunt": "~0.4.1",
+    "grunt-contrib-connect": "^0.11.2",
+    "grunt-contrib-qunit": "*",
     "grunt-contrib-uglify": "~0.1.1",
-    "grunt-contrib-qunit": "*"
+    "qunitjs": "^1.19.0"
   },
   "keywords": []
 }
