--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ env:
 
 before_script:
     - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
-    - npm install -g grunt
+    - npm install -g grunt-cli
 
 script:
     - phpunit
