--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ env:
 before_script:
     - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
     - npm install -g grunt-cli
-
+install: npm install
 script:
     - phpunit
     - grunt test
