--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,7 @@ env:
 
 before_script:
     - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
-    - npm install -g grunt-cli
-    - npm install
 
 script:
     - phpunit
-    - grunt test
+    - npm test
