--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 sudo: false
 
-language:
-    - php
-    - node_js
+language: php
 
 notifications:
   on_success: never
@@ -24,6 +22,9 @@ env:
 
 before_script:
     - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
+
+install:
+  - npm install
 
 script:
     - phpunit
