--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
     "url": "https://github.com/miya0001/simple-map"
   },
   "scripts": {
-    "test": "./node_modules/grunt-cli/bin/grunt test"
+    "test": "grunt test"
   },
   "author": {
     "name": "Takayuki Miyauchi",
     "url": "http://wpist.me/"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
+    "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-qunit": "*",
-    "grunt-contrib-uglify": "~0.1.1",
+    "grunt-contrib-qunit": "^0.7.0",
+    "grunt-contrib-uglify": "^0.9.2",
     "qunitjs": "^1.19.0"
   },
   "keywords": [],
   "dependencies": {
-    "gmaps": "*"
+    "gmaps": "^0.4.21"
   }
 }
