--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ php:
     - 5.6
 
 env:
-    - WP_VERSION=4.3-RC1 WP_MULTISITE=0
     - WP_VERSION=latest WP_MULTISITE=0
+    - WP_VERSION=4.2 WP_MULTISITE=0
     - WP_VERSION=4.1 WP_MULTISITE=0
     - WP_VERSION=4.0 WP_MULTISITE=0
     - WP_VERSION=3.9 WP_MULTISITE=0
