--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ php:
     - 5.6
 
 env:
-    - WP_VERSION=latest WP_MULTISITE=0
+    - WP_VERSION=latest WP_MULTISITE=0 WP_PULUGIN_DEPLOY=1
     - WP_VERSION=4.2 WP_MULTISITE=0
     - WP_VERSION=4.1 WP_MULTISITE=0
     - WP_VERSION=4.0 WP_MULTISITE=0
@@ -22,6 +22,7 @@ env:
 
 before_script:
     - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
+    - bash/build.sh
 
 install:
   - npm install
@@ -29,3 +30,9 @@ install:
 script:
     - phpunit
     - npm test
+
+env:
+  global:
+    - SVN_REPO: https://plugins.svn.wordpress.org/simple-map/
+    - GH_REF: https://github.com/miya0001/simple-map.git
+    - secure: "ZNGMiXE0/uRCdIy2gNGeaQMCMWnsXy643m9U8UlNtOuUmnkrHzAiDeip/C7A/D1HZqaBFN7gILztSeJls6mR0onw1bjL4ex0Zabh0GUTIsg+5DVOvRjLvCGOMKtkHOxdT90x+QDvlTQcWvl4OMEoKrwX11dwtVxo+XG+/7BR2tQ="
