--- a/.travis.yml
+++ b/.travis.yml
@@ -22,14 +22,13 @@ env:
 
 before_script:
     - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
-    - bash/build.sh
-
-install:
-  - npm install
+    - bash bin/build.sh
 
 script:
     - phpunit
     - npm test
+
+after_success: bash bin/deploy.sh
 
 env:
   global:
