--- a/.travis.yml
+++ b/.travis.yml
@@ -12,14 +12,6 @@ php:
     - 5.5
     - 5.6
 
-env:
-    - WP_VERSION=latest WP_MULTISITE=0 WP_PULUGIN_DEPLOY=1
-    - WP_VERSION=4.2 WP_MULTISITE=0
-    - WP_VERSION=4.1 WP_MULTISITE=0
-    - WP_VERSION=4.0 WP_MULTISITE=0
-    - WP_VERSION=3.9 WP_MULTISITE=0
-    - WP_VERSION=3.8 WP_MULTISITE=0
-
 before_script:
     - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
     - bash bin/build.sh
@@ -31,6 +23,13 @@ script:
 after_success: bash bin/deploy.sh
 
 env:
+  matrix:
+    - WP_VERSION=latest WP_MULTISITE=0 WP_PULUGIN_DEPLOY=1
+    - WP_VERSION=4.2 WP_MULTISITE=0
+    - WP_VERSION=4.1 WP_MULTISITE=0
+    - WP_VERSION=4.0 WP_MULTISITE=0
+    - WP_VERSION=3.9 WP_MULTISITE=0
+    - WP_VERSION=3.8 WP_MULTISITE=0
   global:
     - SVN_REPO: https://plugins.svn.wordpress.org/simple-map/
     - GH_REF: https://github.com/miya0001/simple-map.git
