update deploy script

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
     - phpunit
     - npm test
 
-after_success: bash bin/deploy.sh
+after_success: curl -L https://raw.githubusercontent.com/miya0001/travis2wpplugin/master/deploy.sh | bash
 
 env:
   matrix:
