--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,13 @@ notifications:
   on_failure: change
 
 php:
-    - 5.4
     - 5.6
     - 7.0
 
 before_script:
     - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
     - bash bin/build.sh
+    - composer install
 
 script:
     - vendor/bin/phpunit
@@ -24,10 +24,7 @@ after_success: curl -L https://raw.githubusercontent.com/miya0001/travis2wpplugi
 env:
   matrix:
     - WP_VERSION=latest WP_MULTISITE=0
-    - WP_VERSION=4.2 WP_MULTISITE=0
-    - WP_VERSION=4.1 WP_MULTISITE=0
-    - WP_VERSION=4.0 WP_MULTISITE=0
-    - WP_VERSION=3.9 WP_MULTISITE=0
+    - WP_VERSION=nightly WP_MULTISITE=0
 
   global:
     - SVN_REPO: https://plugins.svn.wordpress.org/simple-map/
