--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
     "url": "http://wpist.me/"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-qunit": "^0.7.0",
-    "grunt-contrib-uglify": "^0.9.2",
-    "qunitjs": "^1.19.0"
+    "grunt": "^1.0.2",
+    "grunt-cli": "^1.2.0",
+    "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-qunit": "^2.0.0",
+    "grunt-contrib-uglify": "^3.3.0",
+    "phantomjs-prebuilt": "*",
+    "qunitjs": "*"
   },
   "keywords": [],
   "dependencies": {
-    "gmaps": "^0.4.24"
+    "gmaps": "*"
   }
 }
